# wasvm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  if_gt.wasm  make.sh  report.node.txt  report.txt  run-wasm.js  submodule.sh
benches/: run.rs
ci/: install.sh  script.sh
discovery/: Cargo.toml  memory.x
discovery-wasm/: Cargo.toml
discovery-wasm/src/: lib.rs
discovery/.cargo/: config
discovery/src/: main.rs
fixtures/: add.c  add_five.c  cons16.c  cons8.c  constant.c  count.c  fib.c  if.c  if_eq.c  if_gt.c  if_lt.c  locals.c  multiple.c  signed.c  sub.c
src/: byte.rs  code.rs  element.rs  embedder.rs  error.rs  frame.rs  function.rs  global.rs  inst.rs  internal_module.rs  isa.rs  label.rs  lib.rs  main.rs  memory.rs  module.rs  section.rs  spectest.rs  stack.rs  store.rs  table.rs  trap.rs  utils.rs  validate.rs  value.rs  value_type.rs  vm.rs
src/decode/: byte.rs  code.rs  context.rs  decodable.rs  decode_code.rs  instruction.rs  mod.rs  sec_code.rs  sec_custom.rs  sec_data.rs  sec_element.rs  sec_export.rs  sec_function.rs  sec_global.rs  sec_import.rs  sec_memory.rs  sec_start.rs  sec_table.rs  sec_type.rs  section.rs
src/validate/: context.rs  error.rs  mod.rs
tests/: run.rs
wat/: f32.wat  f64.wat  i32.wat  i64.wat
wat-dist/: f32.wasm  f64.wasm  i32.wasm  i64.wasm
