[package]
name = "wasvm"
version = "0.2.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[dependencies]
# FIXME: Use forked version which doing cargo-cult until an issue below solved.
# https://github.com/rust-lang-nursery/libm/issues/4
libm = { version = "0.1.2", git = "https://github.com/kogai/libm" }
hashbrown = { version = "0.1", features = ["nightly"] }
heapless = "0.4.1"

[dev-dependencies]
wabt = "0.7.3"
flame = "0.2.2"

[[bin]]
name = "main"
path = "bin/main.rs"
