[package]
name = "discovery-wasm"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.33"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = 'abort'
