[package]
name = "wasvm-discovery"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]
# edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"
wasvm = { version = "0.2.0", path = "../" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
