[package]
name = "wasvm-discovery"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
alloc-cortex-m = "0.3.5"

wasvm = { version = "0.2.0", path = "../" }

[[bin]]
name = "discovery"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
panic = 'abort'

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = 'abort'
